add update alert

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,12 @@
       name="description"
       content="Terminplaner"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      ref="%PUBLIC_URL%/apple_splash_1125.png"
+      media="(device-width: 1125px) and (device-heigth: 2436px) and (-webkit-device-pixel-ration: 1)"
+      rel="apple-touch-startup-image"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
