try splash screen apple

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, viewport-fit=cover" />
     <meta name="theme-color" content="#282c34" />
     <meta
       name="description"
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       ref="%PUBLIC_URL%/apple_splash_1125.png"
-      media="(device-width: 1125px) and (device-heigth: 2436px) and (-webkit-device-pixel-ration: 1)"
+      media="screen (device-width: 375px) and (device-heigth: 812px) and (-webkit-device-pixel-ration: 3) and (orientation: portrait)"
       rel="apple-touch-startup-image"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
