--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, viewport-fit=cover, user-scalable=no" />
     <meta name="theme-color" content="#282c34" />
     <meta
       name="description"
