--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="de" manifest="%PUBLIC_URL%/planer.manifest">
+<html lang="de" manifest="planer.manifest">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, viewport-fit=cover, user-scalable=no" />
     <meta name="theme-color" content="#282c34" />
     <meta
@@ -10,16 +10,16 @@
       content="Terminplaner"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <link
-      ref="%PUBLIC_URL%/apple_splash_1125.png"
+      ref="apple_splash_1125.png"
       media="screen (device-width: 375px) and (device-heigth: 812px) and (-webkit-device-pixel-ration: 3) and (orientation: portrait)"
       rel="apple-touch-startup-image"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
