--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="de" manifest="%PUBLIC_URL%/planer.manifest">
+<html lang="de" manifest="/planer.manifest">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, viewport-fit=cover, user-scalable=no" />
     <meta name="theme-color" content="#282c34" />
     <meta
@@ -10,22 +10,22 @@
       content="Terminplaner"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <link
-      ref="%PUBLIC_URL%/apple_splash_1125.png"
+      ref="/apple_splash_1125.png"
       media="screen (device-width: 375px) and (device-heigth: 812px) and (-webkit-device-pixel-ration: 3) and (orientation: portrait)"
       rel="apple-touch-startup-image"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of  in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.png" or "favicon.png", "%PUBLIC_URL%/favicon.png" will
+      Unlike "/favicon.png" or "favicon.png", "/favicon.png" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
@@ -34,6 +34,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
